# JEFF_WorkSpace20190912

./: README.md
EMDBHanaPoc/: EMDBHanaPoc.sln
EMDBHanaPoc/EMDBHanaPoc/: EMDBHanaPoc.vcxproj  EMDBHanaPoc.vcxproj.filters  FilterCondition.cpp  FilterCondition.h  Policy.cpp  Policy.h  UserAttr.cpp  UserAttr.h  ViewMetaData.cpp  ViewMetaData.h  collect_policys.cpp  collect_users.cpp  collect_view_metadata.cpp  interface.h  main.cpp  update_table.cpp
EMDBHanaPoc/EMDBHanaPoc/config/: config.cpp  config.h
EMDBHanaPoc/EMDBHanaPoc/lib/: json_vc71_libmt.lib  json_vc71_libmtd.lib
EMDBHanaPoc/EMDBHanaPoc/lib/x86/: json_vc71_libmt.lib  json_vc71_libmtd.lib
EMDBHanaPoc/EMDBHanaPoc/policymgr/: CMakeLists.txt
EMDBHanaPoc/EMDBHanaPoc/policymgr/include/: exceptionhandle.h  root_certificates.hpp
EMDBHanaPoc/EMDBHanaPoc/policymgr/src/: CCLoginHelper.cpp  CCPolicyHelper.cpp  exceptionhandle.cpp
EMDBHanaPoc/EMDBHanaPoc/tool/: tool.cpp
EMDBHanaPoc/x64/Debug/: config.ini
s4h/NxS4hSqlParser/: CMakeLists.txt  Interface.h  NXSFHAst.h  NXSFHLex.cpp  NXSFHLex.h  common.h  keywords.h  main.cpp
s4h/NxS4hSqlParser/resourece/: hana_syntax.txt
s4h/NxS4hSqlParser/resourece/s4h/: HANA_SQL_KEYWORDS
s4h/NxS4hSqlParser/resourece/s4h_tables/: all_table  common_table  white_special_table
s4h/NxS4hSqlParser/tool/: file_opr_tool.cpp  file_opr_tool.h  format_sql_keywords_tool.h  parse_black_list_tool.h
